--- a/data/sentences/_tar.yml
+++ b/data/sentences/_tar.yml
@@ -1,9 +1,11 @@
 source: _tar.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: altar, attar, avatar
-Please create a short sentence using all these words: lodestar, mortar, nectar
-Please create a short sentence using all these words: plantar, polestar, scimitar
-Please create a short sentence using all these words: sitar, tar, tartar
---- |
-@@@
+The ancient avatar stood in veneration before the grand altar, sprinkling its sweet attar about the room in an act of ultimate worship.
+
+As the sun set, a single lodestar shone brightly in the night sky, inspiring the traveler to keep going with hope in his heart and mortar in his hand as he searched for the mythical nectar of life.
+
+Like a beacon of light, the polestar guided the knight onward, with his scimitar drawn and his feet firmly planted on the plantar of his trusty steed.
+
+The sitar strummed out its haunting melody, while a thick tar of tartar dripped from the walls, creating an eerie atmosphere that lingered in the air.
