--- a/data/sentences/_tern.yml
+++ b/data/sentences/_tern.yml
@@ -1,9 +1,11 @@
 source: _tern.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: astern, bittern, cistern
-Please create a short sentence using all these words: cittern, extern, intern
-Please create a short sentence using all these words: lantern, lectern, pattern
-Please create a short sentence using all these words: stern, subaltern, tern
---- |
-@@@
+The bittern flew a stern flight over the cistern, flapping its wings with determination and skill unlike any other creature in the world.
+
+Interns at the office were often asked to head outside to fetch a cittern from the extern building, and many enjoyed the task as it gave them a chance to get some fresh air.
+
+The intricate pattern on the old lantern was echoed, though in a more muted form, on the lectern in the corner of the room, creating an interesting visual harmony.
+
+The stern captain barked orders at the subalterns, who sprang into action to follow his commands as the terns circled overhead.
