--- a/data/sentences/_tify.yml
+++ b/data/sentences/_tify.yml
@@ -1,9 +1,11 @@
 source: _tify.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: certify, demystify, fortify
-Please create a short sentence using all these words: gratify, identify, justify
-Please create a short sentence using all these words: mystify, quantify, ratify
-Please create a short sentence using all these words: rectify, sanctify, testify
---- |
-@@@
+By certifying the facts, we can demystify what was once considered too difficult to understand and fortify our knowledge of the subject.
+
+To gratify our curiosity, it is important to identify and justify our actions in order to understand the reasons behind them.
+
+The authorities have mystified and quantified the data and ratified the results with their own assessment.
+
+In order to rectify the situation and sanctify its importance, it was necessary to testify on behalf of those affected.
