--- a/data/sentences/_ull.yml
+++ b/data/sentences/_ull.yml
@@ -1,9 +1,11 @@
 source: _ull.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: bull, cull, dull
-Please create a short sentence using all these words: full, gull, hull
-Please create a short sentence using all these words: lull, mull, scull
-Please create a short sentence using all these words: skull, stull, trull
---- |
-@@@
+The farmer used his bull to cull the dull, unproductive cows from his herd, allowing only the most promising animals to remain.
+
+The full moon illuminated the shoreline, and the sound of seagulls crying out from above the rocky hull made a strange harmony that filled the night sky.
+
+Daydreaming among the distant notes of bird song, he lulled himself into a state of peacefulness as he mulled over his thoughts and paddled his scull across the still lake.
+
+The newcomer approached the entrance to the old, abandoned castle cautiously, not wanting to disturb the eerie silence created by the skull perched atop the stone stull and the mournful trull of the wind through the broken windows.
