--- a/data/sentences/_ump.yml
+++ b/data/sentences/_ump.yml
@@ -1,9 +1,11 @@
 source: _ump.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: bump, chump, clump, dump
-Please create a short sentence using all these words: frump, grump, hump, lump
-Please create a short sentence using all these words: plump, pump, rump, slump
-Please create a short sentence using all these words: stump, sump, thump, trump
---- |
-@@@
+The bumpy road was full of chumps clumping along, their faces dumpy with fatigue.
+
+As the frumpy old man stumbled down the street, grumpily humping a large lump, passers-by tittered at his misfortune.
+
+The plump woman trudged along, aimlessly pumping her arms as her rump slumped in exhaustion.
+
+He thumped his way to the stump, where he found a sump hole brimming with water, and decided to trump nature's efforts by creating a makeshift irrigation system.
