--- a/data/sentences/_un.yml
+++ b/data/sentences/_un.yml
@@ -1,9 +1,11 @@
 source: _un.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: bun, dun, faun, homespun
-Please create a short sentence using all these words: leprechaun, noun, nun, outrun
-Please create a short sentence using all these words: overrun, pronoun, pun, rerun
-Please create a short sentence using all these words: shun, spun, stun, tun
---- |
-@@@
+The faun, wearing her homespun bun, dunned across the meadow, her feet pounding against the grass.
+
+The leprechaun tried to outrun the determined nun, but her skillful use of nouns always seemed to be one step ahead.
+
+The pun was so amusing that it overrun its intended audience, and they demanded a rerun to ensure they had heard the correct pronoun.
+
+The tun was spinning so quickly that it stunned the onlookers, who, in response, chose to shun any further interaction and spun away.
