--- a/data/sentences/_ush.yml
+++ b/data/sentences/_ush.yml
@@ -1,9 +1,11 @@
 source: _ush.yml
-generator: ChatGPT
+generator: text-davinci-003
+prompt: 1
 --- |
-Please create a short sentence using all these words: ambush, blush, brush, crush
-Please create a short sentence using all these words: flush, gush, hush, lush
-Please create a short sentence using all these words: mush, plush, rush, shush
-Please create a short sentence using all these words: slush, thrush, tush, underbrush
---- |
-@@@
+The bashful girl blushed when her crush unexpectedly ambushed her with a gentle brush of affection.
+
+The serenity of the lush forest was disrupted by a sudden flush of water gushing out of nowhere, only to be hushed by its tranquility.
+
+He hushed the people with a shush and then rushed to the plush carpet expecting to find some mush beneath his feet.
+
+The thrush sang in the underbrush, seemingly unaffected by the slushy mud beneath its feet, while the little boy tucked his tush in the log.
